# supernote-gan

./: .env.example  .gitignore  README.md  conversion.sh  pyproject.toml
src/: constants.py  main.py
src/dataset/: constants.py  dataloader.py
src/models/: discriminator.py  generator.py
tests/models/: test_discriminator.py  test_generator.py
