[project]
name = "supernote-gan"
version = "0.1.0"
description = "A GAN network trained off of user provided supernotes"
authors = [{ name = "EthanDGee", email = "workethangee@gmail.com" }]
license = { text = "GNU General Public License v3.0" }
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "torch (>=2.9.1,<3.0.0)",
  "torchvision (>=0.24.1,<0.25.0)",
  "supernotelib (>=0.6.2,<0.7.0)",
  "python-dotenv (>=1.2.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
